# all_origins_rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  renovate.json
.github/workflows/: docker-image.yml  rust.yml
src/: app_test.rs  get_page.rs  main.rs  page_types.rs  process_request.rs  server.rs
ssl/: README.md
