[package]
name = "all_origins_rust"
version = "6.0.0"
edition = "2021"
rust-version = "1.72"

[profile.release]
strip = true # Symbols from Binary
opt-level = "z"  # Optimize for size.
lto = true # Enable Link Time Optimization

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1", features = ["macros", "signal", "rt-multi-thread"] }
warp = { version = "0.3.6", features = ["tls"] }

[dev-dependencies]
rand = "0.8.5"
wiremock = "0.6"
