[package]
name = "all_origins_rust"
version = "6.0.0"
edition = "2021"
rust-version = "1.72"

[profile.release]
strip = true # Symbols from Binary
opt-level = "z"  # Optimize for size.
lto = true # Enable Link Time Optimization

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["macros", "signal", "rt-multi-thread"] }
warp = { version = "0.3.7", features = ["tls"] }

[dev-dependencies]
rand = "0.9.0"
wiremock = "0.6"
